--- a/pull-to-load-api/src/main/res/layout/ptl_view_no_more_status.xml
+++ b/pull-to-load-api/src/main/res/layout/ptl_view_no_more_status.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             android:background="#f6f6f6">
+             android:background="#F0F0F0">
 
     <TextView
         android:layout_width="wrap_content"
